[tool.poetry]
name = "populationstats"
version = "0.1.0"
description = ""
authors = ["oranges <email@oranges.net.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
"quickchart.io" = "^1.0.0"
click = "^8.0.3"
plotly = "^5.5.0"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
